--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Hola coursera!!</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coursera</title>
 </head>
 <body>
-<h1>hola coursera es un buen curso</h1>
+    <h1>Coursera</h1>
 </body>
 </html>
